# ha-groq-cerebras

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  api_spec.md  hacs.json  pyproject.toml  quality_scale.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto_assign.yml  auto_assign_new_issues.yml  release-assets.yml
custom_components/groq/: __init__.py  ai_task.py  api.py  compound_tools.py  config_flow.py  const.py  conversation.py  diagnostics.py  feature_registry.py  flow_schemas.py  manifest.json  model_registry.py  prompt_cache.py  rate_limit.py  repairs.py  runtime.py  services.py  services.yaml  simple_tools.py  strings.json  stt.py  subentries.py  text_generation.py  tts.py  tts_engine.py
custom_components/groq/translations/: bg.json  cs.json  da.json  de.json  el.json  en-NZ.json  en-US.json  en.json  es.json  et.json  fi.json  fr.json  hu.json  it.json  lt.json  lv.json  nb.json  nl.json  pl.json  pt-BR.json  ro.json  sv.json
devtools/docker/: requirements-min-ha.txt
docs/: architecture.md
scripts/: benchmark_tts_rate_limit.py
tests/components/groq/: test_coverage_gaps.py  test_diagnostics.py  test_foundation.py  test_groq.py  test_integration_harness.py  test_manifest.py  test_simple_tools.py
tests/scripts/: test_importtime_profile.py
