[project]
name = "ha-groq"
version = "0.1.0"
requires-python = ">=3.14"

[tool.ruff]
# Ruff does not expose a py314 target yet. The package still requires Python
# 3.14; this parser target should move to py314 once Ruff adds it.
target-version = "py313"

[tool.black]
# Keep Black aligned with Ruff until Ruff exposes py314; otherwise Black emits
# Python 3.14 syntax that Ruff cannot parse yet.
target-version = ["py313"]
